force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Pasteuriser_Time_at_Max_Temp_mins__c.field-meta.xml
<CustomField>
    <fullName>Pasteuriser_Time_at_Max_Temp_mins__c</fullName>
    <label>Pasteuriser - Time at Max Temp (mins)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>