force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Pasteuriser_Zone_Temp__c.field-meta.xml
<CustomField>
    <fullName>Pasteuriser_Zone_Temp__c</fullName>
    <label>Pasteuriser - Zone Temp (℃)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>