force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Pre_Filler_Heat_Tunnel__c.field-meta.xml
<CustomField>
    <fullName>Pre_Filler_Heat_Tunnel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Filler Heat Tunnel</label>
    <type>Checkbox</type>
</CustomField>