force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Pre_Filler_Labeller__c.field-meta.xml
<CustomField>
    <fullName>Pre_Filler_Labeller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Filler Labeller</label>
    <type>Checkbox</type>
</CustomField>