force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Pre_Post_Filler__c.field-meta.xml
<CustomField>
    <fullName>Pre_Post_Filler__c</fullName>
    <label>Pre/Post Filler</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Filler</fullName>
            </value>
            <value>
                <fullName>Post Filler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>