force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Product_Pressure_g_Ltr__c.field-meta.xml
<CustomField>
    <fullName>Product_Pressure_g_Ltr__c</fullName>
    <label>Product Pressure - (g/Ltr)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>