force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Product_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Product_Temperature__c</fullName>
    <label>Product Temperature ℃</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>