force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Retort_Maximum_temperature__c.field-meta.xml
<CustomField>
    <fullName>Retort_Maximum_temperature__c</fullName>
    <label>Retort - Maximum temperature  ℃</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>