force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Rinser_Make__c.field-meta.xml
<CustomField>
    <fullName>Rinser_Make__c</fullName>
    <label>Rinser Make</label>
    <length>30</length>
    <type>Text</type>
</CustomField>