force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Rinser_Model__c.field-meta.xml
<CustomField>
    <fullName>Rinser_Model__c</fullName>
    <label>Rinser Model</label>
    <length>30</length>
    <type>Text</type>
</CustomField>