force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Rinser_Type__c.field-meta.xml
<CustomField>
    <fullName>Rinser_Type__c</fullName>
    <label>Rinser Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Liquid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>