force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Security_mm_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Security_mm_Minimum__c</fullName>
    <label>Security (mm) Minimum</label>
    <length>4</length>
    <type>Text</type>
</CustomField>