force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Sleever_Make__c.field-meta.xml
<CustomField>
    <fullName>Sleever_Make__c</fullName>
    <label>Sleever Make</label>
    <length>30</length>
    <type>Text</type>
</CustomField>