force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Sleever_Maximum_Speed_K_bph__c.field-meta.xml
<CustomField>
    <fullName>Sleever_Maximum_Speed_K_bph__c</fullName>
    <label>Sleever - Maximum Speed (K/bph)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>