force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Sleever_Model__c.field-meta.xml
<CustomField>
    <fullName>Sleever_Model__c</fullName>
    <label>Sleever Model</label>
    <length>30</length>
    <type>Text</type>
</CustomField>