force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Sleever_Number_of_Pedestals__c.field-meta.xml
<CustomField>
    <fullName>Sleever_Number_of_Pedestals__c</fullName>
    <label>Sleever - Number of Pedestals</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>