force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Spotting_Feature__c.field-meta.xml
<CustomField>
    <fullName>Spotting_Feature__c</fullName>
    <label>Spotting Feature</label>
    <length>30</length>
    <type>Text</type>
</CustomField>