force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Steriliser_Max_Temp__c.field-meta.xml
<CustomField>
    <fullName>Steriliser_Max_Temp__c</fullName>
    <label>Steriliser - Max Temp (℃)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>