force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Steriliser_Time_at_Max_Temp_min__c.field-meta.xml
<CustomField>
    <fullName>Steriliser_Time_at_Max_Temp_min__c</fullName>
    <label>Steriliser - Time at Max Temp (min)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>