force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Sweep_Off__c.field-meta.xml
<CustomField>
    <fullName>Sweep_Off__c</fullName>
    <label>Sweep Off</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1000 Side</fullName>
            </value>
            <value>
                <fullName>1200 Side</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>