force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Target_PU_s__c.field-meta.xml
<CustomField>
    <fullName>Target_PU_s__c</fullName>
    <label>Target PU&apos;s</label>
    <length>3</length>
    <type>Text</type>
</CustomField>