force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Tax_tape__c.field-meta.xml
<CustomField>
    <fullName>Tax_tape__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax tape</label>
    <type>Checkbox</type>
</CustomField>