force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Total_Cooking_time_mins__c.field-meta.xml
<CustomField>
    <fullName>Total_Cooking_time_mins__c</fullName>
    <label>Total Cooking time (mins)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>