force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Transportation_into_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Transportation_into_Warehouse__c</fullName>
    <label>Transportation into Warehouse</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forklift Truck</fullName>
            </value>
            <value>
                <fullName>AGV</fullName>
            </value>
            <value>
                <fullName>Conveyors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>