force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Type_of_Caps__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Caps__c</fullName>
    <label>Type of Caps</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ROPP</fullName>
            </value>
            <value>
                <fullName>30x60</fullName>
            </value>
            <value>
                <fullName>30x30</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>