force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Types_of_Caps_Other__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Caps_Other__c</fullName>
    <label>Types of Caps - Other</label>
    <length>30</length>
    <type>Text</type>
</CustomField>