force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Vacuum_in_hg_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Vacuum_in_hg_Maximum__c</fullName>
    <label>Vacuum (in/hg) Maximum</label>
    <length>4</length>
    <type>Text</type>
</CustomField>