force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Wet_Glue_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Wet_Glue_Manufacturer__c</fullName>
    <label>Wet Glue Manufacturer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>