force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Wrapper_Make__c.field-meta.xml
<CustomField>
    <fullName>Wrapper_Make__c</fullName>
    <label>Wrapper Make</label>
    <length>30</length>
    <type>Text</type>
</CustomField>