force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Wrapper_Model__c.field-meta.xml
<CustomField>
    <fullName>Wrapper_Model__c</fullName>
    <label>Wrapper Model</label>
    <length>30</length>
    <type>Text</type>
</CustomField>