force-app/main/default/objects/Customer_Technical_Report_CTR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Line_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Form_Complete__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>